[package]
name = "koios_api_client"
version = "0.0.1"
authors = ["olof@twnet.se"]
description = " "
license = "MIT"
edition = "2021"

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
url = "*"
uuid = { version = "*", features = ["serde"] }

[dependencies.reqwest]
version = "*"
features = ["json", "multipart"]

[dev_dependencies]
tokio = {version="*",features=["macros"]}